--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script>
       let array = [1, 2, 3];
 
-      // add value in last array
+      // add value to the first of array
       array.push("nam");
 
-      // add value in first array;
+      // add value to the end of array;
       array.unshift("hoa");
       console.log(array);
     </script>
