update function pop and shift for array

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
       // add value to the end of array;
       array.unshift("hoa");
+
+      //delete value to the first of array
+      array.shift();
+
+      //   delete value to the end of array
+      array.pop();
       console.log(array);
     </script>
   </body>
